# cs236

./: CMakeLists.txt  Database.h  DatalogProgram.h  Graph.h  Interpreter.h  Node.h  Parameter.h  Parser.h  Predicate.h  README.md  Relation.h  Rule.h  Scanner.h  Scheme.h  Token.h  Tuple.h  main.cpp
Database/: Relation.h  Scheme.h
Parse/: DatalogProgram.h  Parameter.h  Parser.h  Predicate.h
Scan/: Scanner.h
